# codex

./: pnpm-lock.yaml  pnpm-workspace.yaml
codex-rs/: Cargo.toml
codex-rs/frontend/: Cargo.toml  README.md  index.html  main.js  package.json  settings_panel.js  tauri.conf.json  vite.config.js
codex-rs/frontend/src/: ChatPanel.js  EditorView.js  FileExplorer.js  api.ts  main.rs  main_layout.js
codex-rs/frontend/src/components/: AuthDialog.tsx  AuthModal.js  ChatPanel.js  ChatPanel.tsx  CommandPalette.tsx  FileTree.js  PatchViewer.js  SearchPanel.js  SettingsDialog.tsx  SettingsPanel.js  Sidebar.tsx  TerminalPanel.tsx
codex-rs/frontend/src/state/: commands.ts  history.ts  workspace.ts
codex-rs/frontend/ui/: App.jsx
docs/: install.md
