[package]
name = "codex-frontend"
version = "0.0.0"
edition = "2024"

[dependencies]
codex-core = { path = "../core" }
codex-file-search = { path = "../file-search" }
codex-apply-patch = { path = "../apply-patch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [] }
toml = "0.9.5"

[build-dependencies]
tauri-build = { version = "1", features = [] }
